--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8" />
@@ -9,19 +9,26 @@
   <title>跨越长城</title>
   <meta name="description" content="跨越长城是一个综合性的网络代理隧道服务商，向客户提供高速稳定的服务" />
   <meta name="copyright" content="Crosswall Network Technology Co.,Ltd." />
-  <meta name="repository" content="https://跨越长城.com" />
+  <!-- 可能不需要 repository meta -->
   <meta name="robots" content="index,follow" />
   <meta name="author" content="AHdark, ahdark@outlook.com">
   
-  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="1d4639a7-3e57-4706-a7f7-5968179bcdde";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+  <script type="text/javascript">
+    window.$crisp=[];
+    window.CRISP_WEBSITE_ID="1d4639a7-3e57-4706-a7f7-5968179bcdde";
+    (function(){
+      var d=document;
+      var s=d.createElement("script");
+      s.src="https://client.crisp.chat/l.js";
+      s.async=1;
+      d.getElementsByTagName("head")[0].appendChild(s);
+    })();
+  </script>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   
   <script src="/src/index.tsx" type="module"></script>
-  <script>
-    window.global = window;
-  </script>
 </body>
 </html>
