--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="repository" content="https://跨越长城.com" />
   <meta name="robots" content="index,follow" />
   
-  crisp: '1d4639a7-3e57-4706-a7f7-5968179bcdde', //填写了会加载crisp
+  <script type="1d4639a7-3e57-4706-a7f7-5968179bcdde";
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
