--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="repository" content="https://跨越长城.com" />
   <meta name="robots" content="index,follow" />
   
-  <script type="1d4639a7-3e57-4706-a7f7-5968179bcdde";
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="1d4639a7-3e57-4706-a7f7-5968179bcdde";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
