--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
+  crisp: '0d31a6be-2276-432f-bd47-ac8d962e84ae', //填写了会加载crisp
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8" />
   <link href="/favicon.svg" rel="icon" />
