--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-  crisp: '0d31a6be-2276-432f-bd47-ac8d962e84ae', //填写了会加载crisp
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0d31a6be-2276-432f-bd47-ac8d962e84ae";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8" />
   <link href="/favicon.svg" rel="icon" />
