--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-CN">
 <head>
-  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0d31a6be-2276-432f-bd47-ac8d962e84ae";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+  <script type="text/javascript">
+    window.$crisp = [];
+    window.CRISP_WEBSITE_ID = "0d31a6be-2276-432f-bd47-ac8d962e84ae";
+    (function() {
+      const d = document;
+      const s = d.createElement("script");
+      s.src = "https://client.crisp.chat/l.js";
+      s.async = 1;
+      d.getElementsByTagName("head")[0].appendChild(s);
+    })();
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8" />
   <link href="/favicon.svg" rel="icon" />
@@ -12,7 +22,6 @@
   <meta name="copyright" content="Crosswall Network Technology Co.,Ltd." />
   <meta name="repository" content="https://跨越长城.com" />
   <meta name="robots" content="index,follow" />
-  
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
