--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="copyright" content="Crosswall Network Technology Co.,Ltd." />
   <meta name="repository" content="https://跨越长城.com" />
   <meta name="robots" content="index,follow" />
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0d31a6be-2276-432f-bd47-ac8d962e84ae";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
